Fix Sticker and Emoji picker opening on narrow mode

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -237,6 +237,15 @@ limitations under the License.
     mask-image: url('$(res)/img/element-icons/room/composer/sticker.svg');
 }
 
+.mx_MessageComposer_buttonMenu::before {
+    mask-image: url('$(res)/img/feather-customised/chevron-down.svg');
+}
+
+.mx_MessageComposer_closeButtonMenu::before {
+    transform: rotate(180deg);
+    transform-origin: center;
+}
+
 .mx_MessageComposer_sendMessage {
     cursor: pointer;
     position: relative;
